@@ -1,3 +1,8 @@
+Sun Jun  9 09:34:44 2013  Tanaka Akira  <akr@fsij.org>
+
+	* bignum.c (big2str_base_powerof2): New function.
+	  (rb_big2str0): Use big2str_base_powerof2 if base is 2, 4, 8, 16 or 32.
+
 Sun Jun  9 00:59:04 2013  Tanaka Akira  <akr@fsij.org>
 
 	* hash.c (rb_hash): Use rb_integer_pack to obtain least significant
